# attachments

./: .gitignore  .pre-commit-config.yaml  ALPHA_RELEASE.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DOCUMENTATION_UPGRADE_SUMMARY.md  ELEGANT_SOLUTION_SUMMARY.md  OPENAI_FORMATS_SUMMARY.md  README.md  RELEASE_NOW.md  debug_loaders.py  demo_adapter_pipeline_vision.py  demo_composable_pipelines.py  demo_elegant_parametric.py  demo_idiomatic_pipelines.py  demo_modular_architecture.py  design_philosophy.md  final_demo.py  llm_readme.md  myrules.mdc  myst.yml  opus_notes_tutorial_demo.py  pyproject.toml  pytest.ini  release_alpha.sh  temp_readme_runner.py  test_audio.py  test_auto_registration.py  test_composable_loaders.py  test_dspy_text_vs_image.py  test_final_readme.py  test_issue.py  test_openai_adapters.py  test_pdf_download.py  test_readme_examples.py  tmp.md  validate_readme_examples.py
.cursor/rules/: attachments_overview.mdc  general_behavior.mdc  jupyter.mdc  myrules.mdc
.github/workflows/: ci.yml  deploy-docs.yml  publish-to-pypi.yml  release-alpha.yml  release-stable.yml
attachments/: __init__.py  core.py  detectors.py  parsers.py  renderers.py  utils.py
docs/: api_reference.md  architecture.md  changelog.md  demo.md  dsl_cheatsheet.md  index.md  installation.md
docs/api/: attachments_class.md  config_class.md  detectors.md  exceptions.md  parsers.md  renderers.md  utilities.md
docs/architecture/: type_dispatch_system.md
docs/example_scripts/: openai_attachments_tutorial.py
docs/examples/: architecture_demonstration.ipynb  atttachment_pipelines.ipynb  pptx_split_demo.ipynb  (+4 more)
examples/: sample.pptx  sample_data.csv
scripts/: KERNEL_INSPECTOR_GUIDE.md  build_and_verify_docs.sh  collect_todos.py  convert_to_notebooks.py  generate_dsl_cheatsheet.py  kernel_inspector.py
tests/: conftest.py  test_all_plugins_contract.py  test_attachments.py  test_audio_processing.py  test_cli.py  test_core_functionality.py  test_document_parsing.py  test_html_parsing.py  test_image_processing.py  test_indexing_slicing.py  test_markdown_rendering.py  test_new_modular_architecture.py  test_pdf_parsing.py  test_pptx_parsing.py  test_smoke.py
(+139 files in other folders)
