[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attachments"
version = "0.3.0"
authors = [
  { name="Maxim Rivest", email="mrive052@gmail.com" },
]
description = "A Python library to handle various file types for LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"  # Using simple string for SPDX identifier
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License", # Replaced by SPDX
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow",
    "python-dotenv",
    "beautifulsoup4",
    "html2text",
    "markdownify",
    "lxml",
    "python-magic",
    "mammoth",
    "PyMuPDF",
    "python-pptx",
    "python-docx",
    "odfpy",
    "pillow-heif",
    "pydub",
    "SpeechRecognition",
    "markitdown[all]>=0.1.1",
    "pypdfium2", # For office_contact_sheet.py PDF rasterisation
    # "pywin32", # Optional: Only needed for MS Office automation on Windows
    # System dependencies (not installable via pip):
    #   - LibreOffice/soffice (for CLI conversion)
    #   - unoconv (for CLI conversion)
]

[project.urls]
"Homepage" = "https://maximerivest.github.io/attachments/"
"Bug Tracker" = "https://github.com/maximrivest/attachments/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-randomly",
    "pytest-cov",
    "flake8",
    "mypy",
    "black",
    "filelock",
    "mystmd",
]
browser = ["playwright>=1.43.0"]
images  = ["Pillow>=10"]
all     = ["playwright>=1.43.0", "Pillow>=10"]

[project.scripts]
attachments = "attachments.__main__:cli"

[tool.setuptools]
# packages = ["attachments"] # We'll let find discover it

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["src"]
norecursedirs = ["mrplay", ".venv", "dist", "build", "attachments.egg-info"]
addopts = "--cov=src/attachments --cov-branch --cov-report=term-missing --cov-fail-under=90"
markers = [
    "contract: marks tests as contract tests (slower, more comprehensive)"
]